# mixed-reality-franka-emika-control

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  LICENSE  LICENSE.md  README.md  SUPPORT.md  install.sh
.reuse/: dep5
LICENSES/: LicenseRef-Unity-Companion-License.txt
MRIRAC_ROS/mrirac/: CMakeLists.txt  launch_sim_fr3.bash  package.xml
MRIRAC_ROS/mrirac/launch/: fr3_DirectControl_real.launch  fr3_DirectControl_sim.launch  fr3_real.launch  fr3_sim.launch  moveit.rviz
MRIRAC_ROS/mrirac/src/: recovery_node.cpp  trajectory_planner_node_Fr3.cpp
MRIRAC_ROS/mrirac_lib/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_lib/include/mrirac_lib/: mrirac_lib.h
MRIRAC_ROS/mrirac_lib/src/mrirac_lib/: mrirac_lib.cpp
MRIRAC_ROS/mrirac_msgs/: CMakeLists.txt
MRIRAC_ROS/mrirac_msgs/msg/: ExperimentData.msg
MRIRAC_ROS/mrirac_msgs/srv/: SwitchController.srv  WaypointTrajectoryPlan.srv
MRIRAC_ROS/mrirac_pick_and_place/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_pick_and_place/src/: pick_and_place_node_Fr3.cpp
MRIRAC_ROS/mrirac_pose_correction/: CMakeLists.txt  package.xml
MRIRAC_ROS/mrirac_pose_correction/src/: pose_correction_node.cpp
MRIRAC_Unity/Assets/: msgbrowser_settings.asset  packages.config
MRIRAC_Unity/Assets/MRIRAC/Prefabs/: DirectControlEnvironmentMaterial.mat  End-effector_line.prefab  Franka_Research_3.prefab  Timer.prefab  TrajectoryLine.prefab  Tranparent red.mat  Transparent blue.mat
MRIRAC_Unity/Assets/MRIRAC/Scripts/: CalibrationStorage.cs  CloseGripper.cs  CollisionTriggerEvent.cs  DirectControlObjectPublisher.cs  Environments.cs  ExperimentDataMessage.cs  ExperimentUIPosition.cs  GripperJointSubscriber.cs  HandPosePublisher.cs  HandTriggerEvent.cs  OpenGripper.cs  PositionCorrection.cs  RayCast.cs  RobotManager.cs  RosIP.cs  SetRRTConnectPlanner.cs  SetRRTStarPlanner.cs  SetStandardPlanner.cs  SetWorkspaceConstraint.cs  StartPositionArm.cs  StorageHandler.cs  SummonObject.cs  SwitchRosControllers.cs  Timer.cs  TimerUI.cs  ToggleRobotArmMesh.cs  TrajectoryPlanner.cs  TrajectoryPlanner_Fr3.cs  UpdateRobot.cs  WaypointPlanner.cs
MRIRAC_Unity/Assets/MRIRAC/URDF/: fr3_2.urdf  panda_2.urdf
MRIRAC_Unity/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
MRIRAC_Unity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityInputSystemProfile.asset  (+2 more)
MRIRAC_Unity/Assets/Resources/: ROSConnectionPrefab.prefab
MRIRAC_Unity/Assets/Scenes/: FrankaEmika.unity
MRIRAC_Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+32 files in other folders)
